syntax = "proto3";
package coordinate;

option go_package = "/pb";

message ClientInfo {
  string name = 1;
  string address = 2;
}

message RegisterResponse {
  int64 code = 1;
  string message = 2;
}

service MapService {
  rpc Register(ClientInfo) returns (RegisterResponse);
}